syntax = 'proto3';

package worker;

option go_package = "banks-api/pkg/reviews";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// ReviewService defines the gRPC service for managing reviews.
service ReviewService {
 // WriteReview creates a new review.
 rpc WriteReview(WriteReviewRequest) returns (WriteReviewResponse) {
    option (google.api.http) = {
      post: "/v1/reviews/write"
      body: "*"
    };
 };

 // ApproveReview approves an existing review.
 rpc ApproveReview(ApproveReviewRequest) returns (ApproveReviewResponse) {
    option (google.api.http) = {
      post: "/v1/reviews/approve"
      body: "*"
    };
 };

 // DeclineReview declines an existing review.
 rpc DeclineReview(DeclineReviewRequest) returns (DeclineReviewResponse) {
    option (google.api.http) = {
      post: "/v1/reviews/decline"
      body: "*"
    };
 };

 // GetReviews retrieves reviews for a specific product.
 rpc GetReviews(GetReviewsRequest) returns (GetReviewsResponse) {
    option (google.api.http) = {
      post: "/v1/reviews/get"
      body: "*"
    };
 };
}

message Review {
 string id = 1 [json_name = "id"];
 string product_id = 2 [json_name = "product_id"];
 string user_id = 3 [json_name = "user_id"];
 string content = 4 [json_name = "content"];
 int32 rating = 5 [json_name = "rating"]; // Rating from 1 to 5
 google.protobuf.Timestamp created_at = 6;
 bool approved = 7 [json_name = "approved"];

 int64 period_from = 8 [json_name = "period_from"];
 int64 period_to = 9 [json_name = "period_to"];
 int64 amount_from = 10 [json_name = "amount_from"];
 int64 amount_to = 11 [json_name = "amount_to"];
 double rate_from = 12 [json_name = "rate_from"];
 double rate_to = 13 [json_name = "rate_to"];
}

// WriteReviewRequest represents the request to write a new review.
message WriteReviewRequest {
 string product_id = 1 [json_name = "bank"];
 string user_id = 2 [json_name = "bank"];
 string content = 3 [json_name = "bank"];
 int32 rating = 4 [json_name = "bank"]; // Rating from 1 to 5
}

// WriteReviewResponse represents the response to writing a new review.
message WriteReviewResponse {
 string review_id = 1 [json_name = "review_id"];
 string message = 2 [json_name = "message"];
}

// ApproveReviewRequest represents the request to approve a review.
message ApproveReviewRequest {
 string review_id = 1 [json_name = "review_id"];
}

// ApproveReviewResponse represents the response to approving a review.
message ApproveReviewResponse {
 string message = 1 [json_name = "message"];
}

// DeclineReviewRequest represents the request to decline a review.
message DeclineReviewRequest {
 string review_id = 1 [json_name = "review_id"];
}

// DeclineReviewResponse represents the response to declining a review.
message DeclineReviewResponse {
 string message = 1 [json_name = "message"];
}

// GetReviewsRequest represents the request to retrieve reviews for a product.
message GetReviewsRequest {
 string product_id = 1 [json_name = "product_id"];
}

// GetReviewsResponse represents the response to retrieving reviews.
message GetReviewsResponse {
 repeated Review reviews = 1 [json_name = "reviews"];
}